Issue #20144: Argument Clinic now supports simple constants as parameter default values.  inspect.Signature correspondingly supports them in __text_signature__ fields for builtins.